--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,33 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav img{
+    width: 100px;
+    display: inline-block;
+    
+}
+
+header img{
+    width: 100vw;
+}
+
+header h2{
+    margin: 30px 0px 17px 30px;
+}
+
+header p{ 
+    margin-left: 30px;
+    font-size: 1.1;
+}
+
+header a{
+    
+}
